# dahsboard_deploy

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SISTEMA_PERMISSOES.md  app.py  comand.txt  comando_build_docker.txt  comando_copiar_pastar_por_ssh.txt  comando_executar_container.txt  common_utils.py  configura_jupyter_acessa_docker-compose.md  docker-compose.yml  navigation.py  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
core/: auth.py  db.py
dashboard_deploy/: .gitignore  README.md  app.py  comand.txt  db_utils.py  dockerfile  navigation.py  requirements.txt
dashboard_deploy/.streamlit/: secrets.toml
deploy_compose/: comand.txt  db_utils.py  docker-compose.yml  navigation.py  start.sh
pages/: 02margens.py  abastecimento.py  abastecimento_veic.py  api_custo_cobli.py  api_custo_combustivel.py  api_custo_manutencao_frota.py  api_custo_motoboy_tercerizado.py  api_custo_pedagio.py  centro_custo.py  custo-frota.py  custo_entrega.py  custo_entrega_entregadores.py  custo_loja_sem_veiculo.py  custos.py  entrega40.py  entrega_e_rota.py  entrega_em_40.py  entrega_logistica.py  entrega_logistica_40.py  estacionamento_custo_frota.py  funcao_Rota_Vcasada.py  manutencao_custo_frota.py  mapa_calor.py  mapa_calor_horas.py  mapa_calor_por_meses.py  modo_venda_itens_curva.py  modo_vendas_sem_curva.py  motorista_ocioso.py  onemargems.py  page1.py  produto_cruzado_fraga.py  proporcao_compras_transferencias.py  qtd_expedicao_hora.py  tipos_entrega.py  veiculos_cobli.py  vendas-cancelamentos-romaneios.py
proxy_server/: intrucao.md
(+43 files in other folders)
