[tool.poetry]
name = "dashboards"
version = "0.1"
description = "Painéis de gestão"
authors = ["Murilo Tuvani <murilo.tuvani@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
mysqlclient = "^2.2.4"
sqlalchemy = "^2.0.34"
pymysql = "^1.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
chardet = "^5.2.0"
bcrypt = "^4.2.1"
msal = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
